# impulse-app

./: .bundleignore  .databricksignore  .gitignore  .gitleaksignore  DEMO.md  INSTALL.md  PROJECT.md  README.md  TEST.md  app.py  app.yaml  databricks.yml  install.sh  profiles.yaml.example  pyproject.toml  requirements.txt
.template/: databricks_template_schema.json
.template/template/: README.md.tmpl  databricks.yml.tmpl  mda_framework_version.json.tmpl  pyproject.toml
.template/template/lib/: mda_framework_v2-0.0.4-py3-none-any.whl
.template/template/resources/: jobs.yml.tmpl
.template/template/src/: 00_setup.py.txt  01_signal_definitions.py.txt  02_report.ipynb.txt  03_orchestrator.ipynb.txt
.template/template/src/chapters/01_chapter/: orchestrator.py.txt
.template/template/src/chapters/01_chapter/pages/: 01_engine_speed_analysis.py.txt
.template/template/src/config/: dev_config.json.tmpl  prd_config.json.tmpl  stg_config.json.tmpl
.template/template/src/postprocessing/: 01_status_post-processing_success.ipynb.txt  02_status_post-processing_failure.ipynb.txt
.template/template/src/preprocessing/: 01_status_pre-processing.ipynb.txt
.template/template/src/utils/: report_utils.py.txt  schemas.py.txt
.template/template/tests/: 00_setup.py.txt
.template/template/tests/integration/: example_test_1.ipynb.txt
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
report_template/: databricks_template_schema.json
server/: agent.py  code_generator.py  config.py  db.py  mcp_tools.py  models.py  observability.py  report_store.py  schema_adapter.py  schema_profile.py  skill_loader.py  token_store.py  ts_cache.py  ts_connector.py  user_settings.py
test/: TEST.md  deploy-fevm.sh  deploy.sh  generate_demo_data.py  synthetic_ts.py
tests/: conftest.py  test_agent.py  test_code_generator.py  (+7 more)
(+95 files in other folders)
