[project]
name = "impulse-app"
version = "0.1.0"
description = "Full-stack Databricks App for creating Impulse data reports via natural language"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "databricks-sdk>=0.81.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "jinja2>=3.1.0",
    "databricks-mcp>=0.8.0",
    "databricks-mcp-server>=0.1.0",
    "psycopg[binary]>=3.1.0",
    "tsdownsample>=0.1.0",
    "numpy>=1.24.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    # Emits native GitHub Actions annotations on failing test lines, so failures
    # show up inline in the Checks tab / PR diff. Auto-activates under Actions.
    "pytest-github-actions-annotate-failures>=0.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-ra"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.coverage.run]
source = ["server"]
omit = ["server/routes/*"]
